fix profile card spacing

--- a/frontend/src/css/UserProfile.css
+++ b/frontend/src/css/UserProfile.css
@@ -33,7 +33,6 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-bottom: 50px;
 }
 
 .profile-content {
